# img2caps.app

./: .gitignore  .vercelignore  README.md  claude.md  package-lock.json  package.json  pyproject.toml  requirements.txt  tailwind.config.js  tsconfig.json  vercel.json
.cursor/rules/: init.mdc
public/: index.html  manifest.json  sitemap.xml
public/data/: keyPositionRegistry.json
python_scripts/: build_color_registry.py  build_key_name_registry.py  build_key_position_registry.py  create_hex_color_registry.py  download_svg_assets.py  download_yuzu_colors.py  fix_color_registry_codes.py  flatten_keyboard_svg.py  generate_design_from_image.py  optimize_images.py  process_yuzu_colors.py
src/: App.css  App.tsx  Footer.tsx  index.css  index.tsx  keymason.css  react-jsx.d.ts
src/assets/: yuzu_import_base.json
src/components/: Editor.tsx  ImageUpload.tsx  InstructionsBox.tsx  KeyboardPreview.tsx  SampleImages.tsx
src/data/: colorRegistry.json
src/hooks/: useImageOverlaySampler.ts  useImageTheme.ts
src/pages/: UploadPage.tsx
src/types/: jsx.d.ts
src/utils/: colorMapping.js  dominantColor.js  imageProcessing.ts  keyboardMapping.js
yuzu/exported/: key_layout.html  sample_colors.html  sample_json.json
yuzu/mappings/: color_registry.md  key_layout.md
